manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-e2e
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: hello-world-e2e.timedevops.click
  labels:
    app.kubernetes.io/name: hello-world-e2e
    app.kubernetes.io/component: backend
spec:
  rules:
  - host: hello-world-e2e.timedevops.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-e2e
            port:
              number: 80
